--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .navbar .nav-link {
   font-size: 14px;
   text-transform: uppercase;
@@ -30,7 +34,7 @@
 
 #home-heading {
   position: relative;
-  min-height: 200px;
+  min-height: 250px;
   background: url('../img/lights.jpg');
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -60,4 +64,33 @@
 
 #video-play a {
   color: #ffffff;
+}
+
+#page-header {
+  margin-top: 70px;
+  height: 250px;
+  background: url('../img/image1.jpg');
+  background-position: 0 -360px;
+  background-attachment: fixed;
+  color: #ffffff;
+  border-bottom: 1px #eeeeee solid;
+  padding-top: 50px;
+}
+
+.about-img {
+  margin-top: -50px;
+}
+
+#faq .card {
+  border: #444444;
+}
+
+#faq a {
+  color: #ffffff;
+  text-decoration: none;
+}
+
+#faq .card-body,
+#faq .card-header {
+  background: #333333;
 }
